# $Id: configure.in,v 1.1 1999/08/27 22:27:16 gram Exp $
dnl Process this file with autoconf to produce a configure script.
AC_INIT(gtkclist.c)
AM_INIT_AUTOMAKE(libui.a, 0.0.0)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_RANLIB

# If we're running gcc, add '-Wall' to CFLAGS.
AC_MSG_CHECKING(to see if we can add '-Wall' to CFLAGS)
if test x$GCC != x ; then
  CFLAGS="-Wall $CFLAGS"
  AC_MSG_RESULT(yes)
else
  AC_MSG_RESULT(no)
fi

AM_PATH_GTK(1.2.0, CFLAGS="$CFLAGS $GTK_CFLAGS" LIBS="$LIBS $GTK_LIBS",
                    AC_MSG_ERROR(GTK+ library not found.))

dnl Checks for header files
AC_HEADER_STDC

AC_OUTPUT(Makefile)
